Modifico el inventario.
En base a la recomendacion de Verde se cambia el inventario.

--- a/Inventories/inventory.ini
+++ b/Inventories/inventory.ini
@@ -1,4 +1,4 @@
 [Ubuntu]
-10.50.9.100 ansible_user=ansible
+ServerA ansible_host=10.50.9.100 ansible_user=ansible
 [Rocky]
-10.50.9.101 ansible_user=ansible
+ServerB ansible_host=10.50.9.101 ansible_user=ansible
