Agregamos los hijos.
Agregamos los directorios al archivo inventory.

--- a/Inventories/inventory.ini
+++ b/Inventories/inventory.ini
@@ -2,3 +2,6 @@
 ServerA ansible_host=10.50.9.100 ansible_user=ansible
 [Rocky]
 ServerB ansible_host=10.50.9.101 ansible_user=ansible
+[linux:childen]
+Ubuntu
+Rocky
