Se agrega certificados de ansible.
El problema que tenia con la conexion shh desde el usuario administrator, con el usuario ansible se debe a que los certificados que agregue estaban mal. Copie los nuevos y quedo operando de manera correcta.

--- a/Inventories_UsuarioAdminsitrator/ansible.cfg
+++ b/Inventories_UsuarioAdminsitrator/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 inventory = inventory.ini
 remote_user = ansible
-private_key_file = ~/.ssh/ansible_key
+private_key_file = ~/tallerfebrero2024/Inventories_UsuarioAdminsitrator/certificates/id_ed25519
