--- a/Inventories_UsuarioAnsible/ansible.cfg
+++ b/Inventories_UsuarioAnsible/ansible.cfg
@@ -1,3 +1,5 @@
 [defaults]
 inventory = inventory.ini
-private_key_file = ~/.ssh/id_ed25519
+remote_user = ansible
+private_key_file = /home/administrator/id_ed25519
+public_key_file = /home/administrator/id_ed25519.pub
