--- a/Inventories_UsuarioAnsible/deploy_dockers.yaml
+++ b/Inventories_UsuarioAnsible/deploy_dockers.yaml
@@ -17,5 +17,5 @@
         ports:
           - "8080:8080"
         volumes:
-          - "/home/ansible/sample.war:/usr/local/tomcat/webapps"
+          - "/home/ansible:/usr/local/tomcat/webapps"
         restart_policy: always
