--- a/Inventories_UsuarioAnsible/deploy_dockers.yaml
+++ b/Inventories_UsuarioAnsible/deploy_dockers.yaml
@@ -4,10 +4,15 @@
   become: true
 
   tasks:
+    - name: Create folder for deploy wars
+      ansible.builtin.file:
+       path: /home/ansible/war_deploys
+       state: directory
+
     - name: Copy war to server
       copy:
        src: /home/administrator/tallerfebrero2024/Tomcat8/sample.war
-       dest: /home/ansible/sample.war
+       dest: /home/ansible/war_deploys/sample.war
 
     - name: Create Docker container for Tomcat 8
       docker_container:
