Error de no cambiar el directorio de deploy al contenedor.
No cambie el directrio luego de cambiar la carpeta para el war.

--- a/Inventories_UsuarioAnsible/deploy_dockers.yaml
+++ b/Inventories_UsuarioAnsible/deploy_dockers.yaml
@@ -22,5 +22,5 @@
         ports:
           - "8080:8080"
         volumes:
-          - "/home/ansible:/usr/local/tomcat/webapps"
+          - "/home/ansible/war_deploys:/usr/local/tomcat/webapps"
         restart_policy: always
