--- a/Inventories_UsuarioAnsible/4_install_ngix.yaml
+++ b/Inventories_UsuarioAnsible/4_install_ngix.yaml
@@ -20,6 +20,11 @@
       name: openssl
       state: present
 
+   - name: Install python3-libsemanage for set boolean
+     dnf:
+      name: python3-libsemanage
+      state: present
+
    - name: Install Nginx
      dnf:
       name: nginx
@@ -35,18 +40,22 @@
      template:
       src: nginx.conf.j2
       dest: /etc/nginx/nginx.conf
-     notify: Restart Nginx
 
    - name: Generate SSL certificate and key
      command: "sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/ssl/nginx-selfsigned.key -out /etc/nginx/ssl/nginx-selfsigned.crt -subj '/C=UY/ST=MVD/L=MVD/O=TallerLinux2024/OU=LinuxServer/CN=ServerB.local'"
 
-  handlers:
-   - name: Restart Nginx
-     systemd:
-       name: nginx
-       state: restarted
+   - name: Set boolean for SELinux to enable httpd_can_network_connect
+     seboolean:
+      name: httpd_can_network_connect
+      state: yes
+      persistent: yes
 
    - name: Restart firewalld service
      service:
        name: firewalld
+       state: restarted
+
+   - name: Restart nginx service
+     service:
+       name: nginx
        state: restarted
