--- a/Inventories_UsuarioAnsible/playbooks/4_install_ngix.yaml
+++ b/Inventories_UsuarioAnsible/playbooks/4_install_ngix.yaml
@@ -38,7 +38,7 @@
 
    - name: Copy Nginx configuration
      template:
-      src: nginx.conf.j2
+      src: /home/administrator/tallerfebrero2024/Inventories_UsuarioAnsible/jinja/nginx.conf.j2
       dest: /etc/nginx/nginx.conf
 
    - name: Generate SSL certificate and key
