Se quita docker compused
No es necesario para este despliegue.

--- a/Inventories_Usuario_Ansible/playbooks/2_install_docker.yaml
+++ b/Inventories_Usuario_Ansible/playbooks/2_install_docker.yaml
@@ -23,7 +23,7 @@
         repo: deb https://download.docker.com/linux/ubuntu focal stable
         state: present
 
-    - name: Update apt and install docker-ce and docker-compose
+    - name: Update apt and install docker-ce
       apt:
         pkg:
           - docker-ce
