--- a/Inventories_Usuario_Ansible/playbooks/0_configure_ssh_connection.yaml
+++ b/Inventories_Usuario_Ansible/playbooks/0_configure_ssh_connection.yaml
@@ -1,6 +1,44 @@
 ---
-- name: Configure SSH connection on Ubuntu and Rocky Linux
+- - name: Create a ansible user on localhost
+  hosts: localhost
+  become: yes
+  vars:
+   user_settings:
+    Rocky:
+     sudo_group: wheel
+    Ubuntu:
+     sudo_group: sudo
+  tasks:
+    - name: Add a user
+      user:
+        name: ansible
+        state: present
+
+   - name: Generate SSH key for ansible user
+      ansible.builtin.shell: ssh-keygen -t ed25519 -f /home/ansible/.ssh/id_ed25519 -N "" -C "Estas son las key para el usuario ansible"
+      args:
+        creates: /home/ansible/.ssh/id_ed25519
+      become_user: ansible
+
+   - name: Copy SSH key ansible to administrator directory
+      ansible.builtin.copy:
+        src: /home/ansible/.ssh/id_ed25519.pub
+        dest: /home/administrator/certificates/id_ed25519.pub
+        remote_src: yes
+
+- name: Create a ansible in remote servers
   hosts: all
   become: yes
+  vars:
+   user_settings:
+    Rocky:
+     sudo_group: wheel
+    Ubuntu:
+     sudo_group: sudo
+
   tasks:
+    - name: Add a user
+      user:
+        name: ansible
+        state: present
 
