Genero una verificacion para no pisar la key del administrador.
Estoy probando controlar no pasar por arriba esa key.

--- a/Primer_Paso/playbooks/0_deploy_user_ansible.yaml
+++ b/Primer_Paso/playbooks/0_deploy_user_ansible.yaml
@@ -11,12 +11,19 @@
     Ubuntu:
       sudo_group: sudo
   tasks:
+    - name: Verificar si la clave SSH ya existe
+      ansible.builtin.stat:
+        path: "/home/administrator/.ssh/id_ed25519.pub"
+      register: ssh_key
 
   - name: Copy SSH Administrator KEY
     ansible.posix.authorized_key:
       user: administrator
       state: present
       key: "{{ lookup('file', '/home/administrator/.ssh/id_ed25519.pub') }}"
+      create: no
+    when: ssh_key.stat.exists == false
+    become: true
 
 ---
 - name: Copy SSH KEY Administrator and Ansible
