Me parece que el error estaba en la consulta del cert.
Cambio para que busque el certificado privado.

--- a/Primer_Paso/playbooks/0_deploy_user_ansible.yaml
+++ b/Primer_Paso/playbooks/0_deploy_user_ansible.yaml
@@ -13,7 +13,7 @@
   tasks:
     - name: Check if shh key exists
       ansible.builtin.stat:
-        path: "/home/administrator/.ssh/id_ed25519.pub"
+        path: "/home/administrator/.ssh/id_ed25519"
       register: ssh_key
 
     - name: Copy SSH Administrator KEY
