--- a/Primer_Paso/playbooks/0_deploy_user_ansible.yaml
+++ b/Primer_Paso/playbooks/0_deploy_user_ansible.yaml
@@ -36,4 +36,4 @@
      ansible.builtin.authorized_key:
        user: ansible
        state: present
-       key: "{{ lookup('file', '/home/ansible/.ssh/id_ed25519.pub') }}"
+       key: "{{ lookup('file', '/home/administrator/.ssh/ansible.pub') }}"
