Cambiamos el playbook

--- a/Documentacion_de_la_instalacion/Primer_Paso/playbooks/0_deploy_user_ansible.yaml
+++ b/Documentacion_de_la_instalacion/Primer_Paso/playbooks/0_deploy_user_ansible.yaml
@@ -40,18 +40,13 @@
        group: ansible
        mode: '0700'
          
-   - name: Generar clave SSH Ed25519 para el usuario ansible
+   - name: Generate SSH KEY Ed25519 for ansible user
      ansible.builtin.openssh_keypair:
-       path: "/home/ansible/.ssh/id_ed25519"  # Ruta donde se generará la clave SSH para el usuario ansible
+       path: "/home/ansible/.ssh/id_ed25519"
        state: present        
-       type: ed25519                          # Tipo de clave SSH
-       owner: ansible                         # Dueño del archivo de clave
-       group: ansible                         # Grupo del archivo de clave
-       mode: '0600'                           # Permisos del archivo de clave
+       type: ed25519                    
+       owner: ansible
+       group: ansible           
+       mode: '0600'           
      become: yes
 
-   - name: Copy Ansible user KEY
-     ansible.builtin.authorized_key:
-       user: ansible
-       state: present
-       key: "{{ lookup('file', '/home/administrator/.ssh/ansible.pub') }}"
