Me estoy cansando.
Voy a reinstalar todo

--- a/Inventories_Usuario_Administrator/playbooks/0_deploy_user_ansible.yaml
+++ b/Inventories_Usuario_Administrator/playbooks/0_deploy_user_ansible.yaml
@@ -31,3 +31,29 @@
        state: present
        line: 'ansible ALL=(ALL) NOPASSWD: ALL'
        insertafter: EOF
+
+   - name: Generate SSH key pair for the ansible user
+     ansible.builtin.openssh_keypair:
+        path: /home/administrator/.ssh/ansible
+        type: ed25519
+        state: present
+        comment: ansible@bastion
+
+   - name: Set correct permissions for .ssh directory
+     ansible.builtin.file:
+       path: /home/administrator/.ssh
+       mode: '0700'
+       state: directory
+
+   - name: Set correct permissions for the private key
+     ansible.builtin.file:
+       path: /home/administrator/.ssh/ansible
+       mode: '0600'
+       state: file
+
+   - name: Copy Ansible user KEY
+     ansible.builtin.authorized_key:
+       user: ansible
+       state: present
+       key: "{{ lookup('file', '/home/administrator/.ssh/ansible.pub') }}"
+
