--- a/Inventories_Usuario_Ansible/ansible.cfg
+++ b/Inventories_Usuario_Ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 inventory = inventory.ini
 remote_user = ansible
-private_key_file = /home/administrator/certificates/id_ed25519
-public_key_file = /home/administrator/certificates/id_ed25519.pub
+private_key_file = /home/administrator/.ssh/id_ed25519
+public_key_file = /home/administrator/.ssh/id_ed25519.pub
