--- a/Inventories_Usuario_Ansible/playbooks/2_install_docker.yaml
+++ b/Inventories_Usuario_Ansible/playbooks/2_install_docker.yaml
@@ -10,6 +10,9 @@
           - ca-certificates
           - curl
           - software-properties-common
+          - python3-pip
+          - virtualenv
+          - python3-setuptools
         state: latest
         update_cache: true
 
