--- a/Inventories_Usuario_Administrator/playbooks/0_deploy_user_ansible.yaml
+++ b/Inventories_Usuario_Administrator/playbooks/0_deploy_user_ansible.yaml
@@ -38,3 +38,8 @@
        user: ansible
        state: present
        key: "{{ lookup('file', '/home/administrator/.ssh/id_ed25519.pub') }}"
+
+   - name: Reiniciar servicio SSH
+     service:
+       name: ssh
+       state: restarted
