--- a/Inventories_Usuario_Administrator/playbooks/0_deploy_user_ansible.yaml
+++ b/Inventories_Usuario_Administrator/playbooks/0_deploy_user_ansible.yaml
@@ -39,7 +39,7 @@
        state: present
        key: "{{ lookup('file', '/home/administrator/.ssh/id_ed25519.pub') }}"
 
-   - name: Reiniciar servicio SSH
+   - name: Restart SSH service
      service:
        name: ssh
        state: restarted
